[package]
name = "rust-parser"
version = "0.1.0"
authors = ["Alexander Korn <a@lxnd.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1"
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
